--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
 		
 		<script src="./js/js_plus.min.js"></script> <!-- js+ -->
 		
-		<script src="https://wzh656.github.io/gobang/js/count.js" async></script>
-		<script src="https://wzh656.github.io/gobang/js/dynamic.js" async></script>
+		<script src="https://wzh656.github.io/gobang/js/count.js"></script>
+		<script src="https://wzh656.github.io/gobang/js/dynamic.js"></script>
 		<script>
 		var _hmt = _hmt || [];
 		(function() {
@@ -630,7 +630,6 @@ function saveSetting(){
 	localStorage.setItem("五子棋_游戏设置", JSON.stringify(setting_game));
 	localStorage.setItem("五子棋_个性化设置", JSON.stringify(setting_personal));
 	localStorage.setItem("五子棋_音乐设置", JSON.stringify(setting_music));
-	console.log("saveSetting", setting_music)
 }
 //加载设置
 function readSetting(){
@@ -1151,7 +1150,8 @@ $("#one").click(function(){
 
 //多人联机
 $("#online").click(function(){
-	plus.runtime.openURL("https://wzh656.github.io/gobang/");
+	go("rooms.html");
+	// plus.runtime.openURL("https://wzh656.github.io/gobang/");
 });
 
 
