--- a/one_4D.html
+++ b/one_4D.html
@@ -406,7 +406,6 @@
 		
 		<script src="https://wzh656.github.io/gobang/js/dynamic.js" async></script>
 		<script src="https://wzh656.github.io/gobang/js/count.js" async></script>
-		<script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;a.charset="utf-8";m.parentNode.insertBefore(a,m)})(window,document,"script",('https:' == document.location.protocol ? 'https:' : 'http:') + "//widget.daovoice.io/widget/c17090af.js","daovoice")</script>
 		<script>
 		var _hmt = _hmt || [];
 		(function() {
@@ -546,8 +545,10 @@ $("html").addClass("fadeIn");
 function go(url){
 	$("html").addClass("outDown");
 	setTimeout(function(){
-		plus.navigator.setStatusBarBackground("#000");
-		plus.navigator.setStatusBarStyle("light");
+		if (typeof plus != "undefined"){
+			plus.navigator.setStatusBarBackground("#000");
+			plus.navigator.setStatusBarStyle("light");
+		}
 		location.href = url;
 	}, 600);
 	layer.load(0);
