--- a/rooms.html
+++ b/rooms.html
@@ -331,7 +331,6 @@
 		
 		<script src="https://wzh656.github.io/gobang/js/dynamic.js" async></script>
 		<script src="https://wzh656.github.io/gobang/js/count.js" async></script>
-		<script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;a.charset="utf-8";m.parentNode.insertBefore(a,m)})(window,document,"script",('https:' == document.location.protocol ? 'https:' : 'http:') + "//widget.daovoice.io/widget/c17090af.js","daovoice")</script>
 		<script>
 		var _hmt = _hmt || [];
 		(function() {
@@ -439,6 +438,14 @@ $("html").addClass("fadeIn");
 function go(url){
 	$("html").addClass(url == "index.html"? "outDown": "outHeight");
 	setTimeout(function(){
+		if (typeof plus != "undefined")
+			if (url == "index.html"){
+				plus.navigator.setStatusBarBackground("#000");
+				plus.navigator.setStatusBarStyle("light");
+			}else{
+				plus.navigator.setStatusBarBackground("#aef");
+				plus.navigator.setStatusBarStyle("dark");
+			}
 		location.href = url;
 	}, 600);
 	layer.load(0);
