--- a/one_4D.html
+++ b/one_4D.html
@@ -489,6 +489,10 @@
 			</div>
 		</section>
 		
+		<footer style="display: none;">
+			<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280239115'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1280239115%26online%3D1%26show%3Dline' async type='text/javascript'%3E%3C/script%3E"));</script>
+		</footer>
+		
 <script>
 //生成任意维数组
 Array.new = function(value, len, ...num){
