--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 		<link rel="stylesheet" href="./layui/css/layui.css" />
 		
 		<!-- 调试工具 -->
-		<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+		<!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 		<script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 		<script>
 		if ( /ipad|iphone|midp|rv:1.2.3.4|ucweb|android|windows ce|windows mobile/.test( navigator.userAgent.toLowerCase() ) ){
@@ -352,7 +352,7 @@
 			eruda.init();
 			new VConsole();
 		}
-		</script>
+		</script> -->
 		
 		<!-- PianoMusic Bgm -->
 		<script src="./js/acoustic_grand_piano-ogg.js"></script>
@@ -553,9 +553,6 @@ document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#000");
 	plus.navigator.setStatusBarStyle("light");
 }, false);
-</script>
-<script>
-
 </script>
 <script>
 $("html").addClass("fadeIn");
