--- a/one_2D.html
+++ b/one_2D.html
@@ -268,7 +268,7 @@
 		<link rel="stylesheet" href="./layui/css/layui.css" />
 		
 		<!-- 调试工具 -->
-		<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+		<!--<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 		<script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 		<script>
 		if ( /ipad|iphone|midp|rv:1.2.3.4|ucweb|android|windows ce|windows mobile/.test( navigator.userAgent.toLowerCase() ) ){
@@ -276,7 +276,7 @@
 			eruda.init();
 			new VConsole();
 		}
-		</script>
+		</script>-->
 		
 		<!-- PianoMusic Bgm -->
 		<script src="./js/acoustic_grand_piano-ogg.js"></script>
@@ -287,6 +287,15 @@
 		
 		<script src="https://wzh656.github.io/gobang/js/dynamic.js" async></script>
 		<script src="https://wzh656.github.io/gobang/js/count.js" async></script>
+		<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?c6b8f0ad7ec671e54d83e86a67280999";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
 		
 	</head>
 	<body>
@@ -1288,6 +1297,8 @@ $("#toolBtn > .review").click(function(){
 $("#info > .input > button").click(chat);
 function chat(){
 	const msg = $("#info > .input > input").val();
+	if (msg.length <= 0) return; //无输入
+	
 	layer.tips(msg, $("#main > .self > i")[0], {tips: 1}); //上方
 	$("#info > .input > input").val(""); //清空输入
 	output("你：" + msg);
@@ -1299,6 +1310,7 @@ function chat(){
 				const content = json.content.replace(/\{br\}/g, "<br>");
 				layer.tips(content, $("#main > .opposite > i")[0], {tips: 1}); //上方
 				output("AI：" + content);
+				new Player("http://tts.baidu.com/text2audio?lan=zh&ie=UTF-8&spd=7&text="+encodeURIComponent(content)).play();
 			}else{
 				output("错误："+json.result, true);
 			}
