--- a/one_3D.html
+++ b/one_3D.html
@@ -330,6 +330,7 @@
 		<!-- babylon.js -->
 		<script src="./js/babylon.min.js"></script>
 		<script src="./js/babylonjs.materials.min.js"></script>
+		<script src="./js/babylon.meshwriter.min.js"></script>
 		
 		<!-- layui -->
 		<!--<link rel="stylesheet" href="https://unpkg.com/layui@2.6.4/dist/css/layui.css">
@@ -338,7 +339,7 @@
 		<link rel="stylesheet" href="./layui/css/layui.css" />
 		
 		<!-- 调试工具 -->
-		<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+		<!--<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 		<script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 		<script>
 		if ( /ipad|iphone|midp|rv:1.2.3.4|ucweb|android|windows ce|windows mobile/.test( navigator.userAgent.toLowerCase() ) ){
@@ -346,7 +347,7 @@
 			eruda.init();
 			new VConsole();
 		}
-		</script>
+		</script>-->
 		
 		<!-- PianoMusic Bgm -->
 		<script src="./js/acoustic_grand_piano-ogg.js"></script>
@@ -357,6 +358,15 @@
 		
 		<script src="https://wzh656.github.io/gobang/js/dynamic.js" async></script>
 		<script src="https://wzh656.github.io/gobang/js/count.js" async></script>
+		<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?c6b8f0ad7ec671e54d83e86a67280999";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
 		
 	</head>
 	<body>
@@ -532,6 +542,10 @@ class Board{
 			circle: [], //圆圈标记
 			win: [], //获胜
 			analyse: [] //分析
+		};
+		this.text = { //获胜字体
+			win: null,
+			fail: null
 		};
 	}
 	
@@ -793,6 +807,8 @@ class Board{
 			}
 		}
 		
+		//游戏结束字体
+		this.Writer = BABYLON.MeshWriter(this.scene);
 		
 		//优化阻止dirty
 		this.scene.blockMaterialDirtyMechanism = true;
@@ -1192,6 +1208,48 @@ class Board{
 	}
 	
 	
+	/* 字体 */
+	//添加字体
+	addText(text, type, color="#ff0000", rotation){
+		this.clearText(type); //如果有 删除
+		const sps = new this.Writer( 
+			text,
+			{
+				anchor: "center",
+				"letter-height": 30,
+				"letter-thickness": 5,
+				color,
+				"font-family": "xs",
+				position: {
+					y: this.ijk2xyz(0, this.rows, 0)[1]
+				}
+			}
+		);
+		const mesh = sps.getMesh();
+		mesh.rotation.x = rotation;
+		this.sizeInAnimation(mesh, 100);
+		this.text[type] = sps;
+		return this;
+	}
+	
+	//删除字体
+	clearText(type){
+		if (type){
+			const sps = this.text[type];
+			if (this.text[type])
+				this.sizeOutAnimation(sps.getMesh(), 100)
+					.then(()=>{
+						if (sps.getMesh().mesh.goalVisible != true)
+							sps.dispose();
+					});
+		}else{
+			this.clearText("win");
+			this.clearText("fail");
+		}
+		return this;
+	}
+	
+	
 	/* 占位符控制 */
 	//层增大
 	layerAdd(){
@@ -1341,7 +1399,7 @@ class Board{
 
 
 const {N=5, cols=10, rows=10, depth=10} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}"),
-	{mistake=true, skybox=true, moon=true, moon=true, border=true} = JSON.parse(localStorage.getItem("五子棋_个性化设置") || "{}");
+	{mistake=true, skybox=true, moon=true, border=true} = JSON.parse(localStorage.getItem("五子棋_个性化设置") || "{}");
 const board = new Board({ //棋盘
 	canvas: $("#board")[0],
 	background: [0xff/0xff, 0xfa/0xff, 0xe8/0xff],
@@ -1590,6 +1648,7 @@ let game = {
 					{title: "胜利！", icon: 6}
 				);
 				
+				board.addText("You Win!", "win", "#ff0000", -Math.PI/2);
 				game_record.three.win++;
 				game_record.three[N].win++;
 				game_record.three[N][+this.first].win++;
@@ -1605,6 +1664,7 @@ let game = {
 					{title: "你失败了！", icon: 5}
 				);
 				
+				board.addText("You Failed!", "win", "#ff0000", Math.PI/2);
 				game_record.three.fail++;
 				game_record.three[N].fail++;
 				game_record.three[N][+this.first].fail++;
@@ -1797,7 +1857,7 @@ function init(){
 	//棋盘
 	board.clearLines(); //删除所有划线
 	waiting = true; //禁止点击
-	board.clear().clearLines().intoAnimation().then(()=>{
+	board.clear().clearLines().clearText().intoAnimation().then(()=>{
 		//game.startTime = +new Date();
 		//game.set(1); //黑棋先下
 		waiting = false; //允许点击
@@ -2166,6 +2226,8 @@ $("#toolBtn > .review").click(function(){
 $("#info > .input > button").click(chat);
 function chat(){
 	const msg = $("#info > .input > input").val();
+	if (msg.length <= 0) return; //无输入
+	
 	layer.tips(msg, $("#main > .self > i")[0], {tips: 1}); //上方
 	$("#info > .input > input").val(""); //清空输入
 	output("你：" + msg);
@@ -2177,6 +2239,7 @@ function chat(){
 				const content = json.content.replace(/\{br\}/g, "<br>");
 				layer.tips(content, $("#main > .opposite > i")[0], {tips: 1}); //上方
 				output("AI：" + content);
+				new Player("http://tts.baidu.com/text2audio?lan=zh&ie=UTF-8&spd=7&text="+encodeURIComponent(content)).play();
 			}else{
 				output("错误："+json.result, true);
 			}
