--- a/one_3D.html
+++ b/one_3D.html
@@ -289,35 +289,6 @@
 			background-color: #ccc;
 			border: 3px inset #ddd;
 		}
-		
-		
-		/* info */
-		#info{
-			z-index: 1;
-			display: flex;
-			flex-direction: column;
-			margin: 8px;
-		}
-		#info > .output{
-			height: 160px;
-			overflow-y: auto;
-		}
-		#info > .output > p{
-			margin: 0;
-			font-size: 0.9em;
-		}
-		#info > .input{
-			display: flex;
-			margin-top: 0.5rem;
-		}
-		#info > .input > input{
-			width: 100%;
-			margin-right: 0.2rem;
-		}
-		#info > .input > button{
-			flex: none;
-			margin-left: 0.2rem;
-		}
 		</style>
 		
 		<!-- jquery -->
@@ -357,6 +328,15 @@
 		
 		<script src="https://wzh656.github.io/gobang/js/dynamic.js" async></script>
 		<script src="https://wzh656.github.io/gobang/js/count.js" async></script>
+		<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?c6b8f0ad7ec671e54d83e86a67280999";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
 		
 	</head>
 	<body>
@@ -422,13 +402,6 @@
 					</svg>
 				</div>
 			</div>
-			<form id="info" onsubmit="return chat();">
-				<div class="input">
-					<input placeholder="要发送的消息" class="layui-input" />
-					<button class="send layui-btn layui-btn-primary layui-border-blue">发送</button>
-				</div>
-				<div class="output layui-textarea" disabled></div>
-			</form>
 		</section>
 		
 		<footer style="display: none;">
@@ -2172,36 +2145,6 @@ $("#toolBtn > .review").click(function(){
 		$("#tools > .review").slideToggle("slow", ()=>$(this).removeAttr("disabled"));
 	}
 });
-
-
-//发送消息
-$("#info > .input > button").click(chat);
-function chat(){
-	const msg = $("#info > .input > input").val();
-	layer.tips(msg, $("#main > .self > i")[0], {tips: 1}); //上方
-	$("#info > .input > input").val(""); //清空输入
-	output("你：" + msg);
-	
-	setTimeout(function(){
-		$.get("http://api.qingyunke.com/api.php?key=free&appid=0&msg="+encodeURIComponent(msg), function(data, status){
-			const json = JSON.parse(data);
-			if (json.result == 0){
-				const content = json.content.replace(/\{br\}/g, "<br>");
-				layer.tips(content, $("#main > .opposite > i")[0], {tips: 1}); //上方
-				output("AI：" + content);
-			}else{
-				output("错误："+json.result, true);
-			}
-		});
-	}, 600+800*Math.random());
-	return false;
-}
-function output(text, center=false){
-	$("#info > .output").append(
-		$("<p></p>").html( text )
-			.css("text-align", center? "center": "")
-	);
-}
 </script>
 		
 	</body>
