--- a/one_4D.html
+++ b/one_4D.html
@@ -388,6 +388,7 @@
 		<!-- babylon.js -->
 		<script src="./js/babylon.min.js"></script>
 		<script src="./js/babylonjs.materials.min.js"></script>
+		<script src="./js/babylon.meshwriter.min.js"></script>
 		
 		<!-- layui -->
 		<!--<link rel="stylesheet" href="https://unpkg.com/layui@2.6.4/dist/css/layui.css">
